--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,6 +19,9 @@
                         <a class="nav-link" th:href="@{/admin/categories}">Categories Manager</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/admin/uploads}">Uploads Manager</a>
+                    </li>
+                    <li class="nav-item">
                         <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
                             <input class="btn btn-secondary btn-sm" type="submit" value="Logout"/>
                         </form>
