--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <label for="image">Book image to upload:</label>
-                    <input type="file" class="form-control" id="image" name="image" required/>
+                    <input type="file" th:field="*{image}" class="form-control" id="image" name="image" required/>
                 </div>
                 <button type="submit" class="btn btn-primary">Save Book</button>
             </form>
