--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" th:href="@{/admin/categories}">Categories Manager</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/admin/uploads}">Uploads Manager</a>
+                        <a class="nav-link" th:href="@{/admin/images}">Images Manager</a>
                     </li>
                     <li class="nav-item">
                         <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
