--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -6,6 +6,11 @@
     <body>
         <header th:replace="fragments::header"></header>
         <div class="container">
+            <h1>Images Manager</h1>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/admin}">Admin</a></li>
+                <li class="breadcrumb-item active">Images Manager</li>
+            </ul>
             <div class="row">
                 <div class="col-sm-3 my-2 d-flex align-content-stretch flex-wrap" th:each="mi : ${allMetaInfo}">
                     <div class="card">
