--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,16 +10,15 @@
             <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <!--<input type="email" class="form-control" id="email" placeholder="enter email" name="username" required>-->
-                    <input type="text" class="form-control" id="email" placeholder="enter email" name="username" required>
-                    <div class="invalid-feedback">Please fill out this field with your email.</div>
+                    <input class="form-control" type="email" id="email" placeholder="enter email" name="username" required>
+                    <div class="invalid-feedback">Please fill out this field with your email</div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" placeholder="enter password" name="password" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <input class="form-control" type="password" id="password" placeholder="enter password" name="password" required>
+                    <div class="invalid-feedback">Please fill out this field</div>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button class="btn btn-primary" type="submit">Login</button>
             </form>
             <br/>
             <span>New? Click <a th:href="@{/newUser}">here</a> to register.</span>
